# api-key-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 04fa5ea39ed0_add_scopes_table_and_many_to_many_.py  6bc3864fa3ba_add_scopes_table_and_many_to_many_.py  ac7395af1cb6_add_timezone_to_created_at.py  c108d5384a18_create_clients_and_api_keys_tables.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/routes/: clients.py  demo.py  keys.py  scopes.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  security.py
app/core/exceptions/: exception_handlers.py  exceptions.py
app/models/: __init__.py  api_key.py  client.py  enums.py  scope.py
app/repositories/: apikey_repository.py  client_repository.py  scope_repository.py
app/schemas/: apikey.py  client.py  scope.py
app/services/: apikey_service.py  client_service.py  scope_service.py
tests/e2e/: conftest.py  test_apikeys.py  test_clients.py  test_scopes.py
tests/unit/: conftest.py  test_apikey_service.py  test_client_service.py  test_scope_service.py
